<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5158DA"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/txv_detalles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5158DA"
        android:fontFamily="monospace"
        android:text="@string/txv_detalles"
        android:textAlignment="center"
        android:textColor="#AFF4AD"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


    <!-- <a href="https://www.flaticon.es/iconos-gratis/whatsapp" title="whatsapp iconos">Whatsapp iconos creados por vidyavidz - Flaticon</a> -->

    <Button
        android:id="@+id/btn_linkedin"
        android:text="@string/btn_linkedin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_detalles"
        app:layout_constraintVertical_bias="0.101"
        style="@style/boton_detalles" />

    <Button
        android:id="@+id/btn_whatsapp"
        style="@style/boton_detalles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_whatsapp"
        app:icon="@drawable/whatsapp_claro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_linkedin"
        app:layout_constraintVertical_bias="0.094" />

    <EditText
        android:id="@+id/etx_mensaje"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#CCC48E"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/etx_mensaje"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/btn_enviacorreo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/txv_enviacorreo"
        android:textColor="#AFF4AD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_whatsapp" />

    <Button
        android:id="@+id/btn_enviacorreo"
        style="@style/boton_detalles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_enviacorreo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/btn_volver"
        app:backgroundTint="#60E411"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_rew" />

</androidx.constraintlayout.widget.ConstraintLayout>